message-service/message-broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\Inholland\go\bin\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: message-broker
  name: message-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: message-broker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Inholland\go\bin\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/message-service-default: "true"
        io.kompose.service: message-broker
    spec:
      containers:
        - image: rabbitmq:3-management-alpine
          name: message-broker
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources: {}
      restartPolicy: Always
status: {}
